--- a/libs/dh/imbalance-prices/src/components/details/details.component.html
+++ b/libs/dh/imbalance-prices/src/components/details/details.component.html
@@ -14,7 +14,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<ng-container *transloco="let t; read: 'imbalancePrices.drawer'">
+<ng-container *transloco="let t; prefix: 'imbalancePrices.drawer'">
   <watt-drawer
     #drawer
     [autoOpen]="imbalancePrice()"
