refactor(dh): move logic to separate component

--- a/libs/dh/metering-point/feature-move-in/src/components/move-in.component.html
+++ b/libs/dh/metering-point/feature-move-in/src/components/move-in.component.html
@@ -26,89 +26,7 @@ limitations under the License.
       [label]="t('steps.customerDetails.label')"
       [nextButtonLabel]="t('steps.contactDetails.label')"
     >
-      <form [formGroup]="customerDetailsForm">
-        <watt-datepicker
-          class="cutOffDate"
-          [label]="t('steps.customerDetails.cutOffDate')"
-          [min]="yesterday"
-          [formControl]="customerDetailsForm.controls.cutOffDate"
-        />
-
-        <watt-dropdown
-          class="moveInType"
-          dhDropdownTranslator
-          translateKey="meteringPoint.moveIn.steps.moveInType"
-          [label]="t('steps.customerDetails.moveInType')"
-          [options]="moveInTypeDropdownOptions"
-          [showResetOption]="false"
-          [formControl]="customerDetailsForm.controls.moveInType"
-        />
-
-        <vater-stack align="start" gap="s" class="watt-space-stack-l">
-          <span class="watt-label">{{ t("steps.customerDetails.customerInformation") }}</span>
-
-          <vater-stack direction="row" gap="m">
-            <watt-radio
-              group="customer-type"
-              [formControl]="customerDetailsForm.controls.customerType"
-              value="private"
-              >{{ t("steps.customerDetails.private") }}</watt-radio
-            >
-            <watt-radio
-              group="customer-type"
-              [formControl]="customerDetailsForm.controls.customerType"
-              value="business"
-              >{{ t("steps.customerDetails.business") }}</watt-radio
-            >
-          </vater-stack>
-        </vater-stack>
-
-        @if (customerDetailsForm.controls.customerType.value === "private") {
-          @if (customerDetailsForm.controls.privateCustomer !== undefined) {
-            <watt-text-field
-              class="name"
-              [label]="t('steps.customerDetails.name1')"
-              [formControl]="customerDetailsForm.controls.privateCustomer.controls.name1"
-            />
-
-            <watt-text-field
-              class="cpr"
-              [label]="t('steps.customerDetails.cpr1')"
-              [formControl]="customerDetailsForm.controls.privateCustomer.controls.cpr1"
-            />
-
-            <watt-text-field
-              class="name"
-              [label]="t('steps.customerDetails.name2')"
-              [formControl]="customerDetailsForm.controls.privateCustomer.controls.name2"
-            />
-
-            <watt-text-field
-              class="cpr"
-              [label]="t('steps.customerDetails.cpr2')"
-              [formControl]="customerDetailsForm.controls.privateCustomer.controls.cpr2"
-            />
-          }
-        } @else {
-          @if (customerDetailsForm.controls.businessCustomer !== undefined) {
-            <watt-text-field
-              [label]="t('steps.customerDetails.companyName')"
-              class="name"
-              [formControl]="customerDetailsForm.controls.businessCustomer.controls.companyName"
-            />
-
-            <watt-text-field
-              [label]="t('steps.customerDetails.cvr')"
-              class="cvr"
-              [formControl]="customerDetailsForm.controls.businessCustomer.controls.cvr"
-            />
-          }
-        }
-
-        <watt-checkbox [formControl]="customerDetailsForm.controls.isProtectedAddress">
-          {{ t("steps.customerDetails.protectedAddress") }}
-        </watt-checkbox>
-      </form>
+      <dh-customer-details [customerDetailsForm]="customerDetailsForm" />
     </watt-stepper-step>
 
     <watt-stepper-step
