Refac dataSource input

--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -22,7 +22,7 @@ limitations under the License.
   [matSortActive]="sortBy"
   [matSortDirection]="sortDirection"
   [matSortDisableClear]="!sortClear"
-  [dataSource]="dataSource"
+  [dataSource]="dataSource()"
   [attr.aria-label]="description"
   (matSortChange)="sortChange.emit($event)"
 >
