--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -155,7 +155,7 @@ limitations under the License.
   @if (_hasFooter()) {
     <tr
       mat-footer-row
-      [class.watt-table-hide-footer]="loading || dataSource.filteredData.length === 0"
+      [class.watt-table-hide-footer]="loading || dataSource().filteredData.length === 0"
       *matFooterRowDef="_getColumns(); sticky: stickyFooter"
     ></tr>
   }
