Update columns input to signal

--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -56,7 +56,7 @@ limitations under the License.
     </td>
   </ng-container>
 
-  @for (column of columns | keyvalue; track column.key) {
+  @for (column of columns() | keyvalue; track column.key) {
     <ng-container [matColumnDef]="column.key" [stickyEnd]="column.value.stickyEnd?.()">
       <th
         mat-header-cell
