--- a/libs/watt/package/dropdown/watt-dropdown.component.html
+++ b/libs/watt/package/dropdown/watt-dropdown.component.html
@@ -16,24 +16,24 @@ limitations under the License.
 -->
 <watt-field
   [control]="parentControl"
-  [chipMode]="chipMode"
-  [label]="label"
+  [chipMode]="chipMode()"
+  [label]="label()"
   (click)="matSelect.open()"
 >
-  @if (chipMode) {
+  @if (chipMode()) {
     <watt-menu-chip
       [opened]="matSelect.panelOpen"
       (toggle)="matSelect.open()"
-      [selected]="!!matSelect?.triggerValue && !disableSelectedMode"
+      [selected]="!!matSelect?.triggerValue && !disableSelectedMode()"
       [disabled]="matSelectControl.disabled"
     >
-      {{ placeholder }}
+      {{ placeholder() }}
       @if (showTriggerValue) {
         <span>
-          @if (placeholder) {
+          @if (placeholder()) {
             :
           }
-          {{ getCustomTrigger?.(matSelect.value) ?? matSelect?.triggerValue }}
+          {{ getCustomTrigger()?.(matSelect.value) ?? matSelect?.triggerValue }}
         </span>
       }
       @if (showChipLabel) {
@@ -43,35 +43,35 @@ limitations under the License.
   }
 
   <mat-select
-    [attr.aria-label]="label"
+    [attr.aria-label]="label()"
     [formControl]="matSelectControl"
-    [placeholder]="placeholder"
+    [placeholder]="placeholder()"
     #matSelect
-    [panelWidth]="panelWidth"
-    [multiple]="multiple"
-    [ngClass]="{ chip: chipMode }"
+    [panelWidth]="panelWidth()"
+    [multiple]="multiple()"
+    [ngClass]="{ chip: chipMode() }"
     [panelClass]="{
       'watt-dropdown-panel': true,
-      'watt-dropdown-panel-chip-mode': chipMode,
+      'watt-dropdown-panel-chip-mode': chipMode(),
     }"
   >
     <!-- We use this instead of ngIf, since it will trigger a NG0100: ExpressionChangedAfterItHasBeenCheckedError: Expression has changed after it was checked. -->
-    <mat-option [style.display]="!hideSearch ? 'block' : 'none'">
+    <mat-option [style.display]="!hideSearch() ? 'block' : 'none'">
       <ngx-mat-select-search
         [formControl]="filterControl"
-        [placeholderLabel]="placeholder"
+        [placeholderLabel]="placeholder()"
         closeIcon="close"
-        [showToggleAllCheckbox]="multiple"
+        [showToggleAllCheckbox]="multiple()"
         (toggleAll)="onToggleAll($event)"
         [toggleAllCheckboxChecked]="isToggleAllChecked"
         [toggleAllCheckboxIndeterminate]="isToggleAllIndeterminate"
-        [noEntriesFoundLabel]="noOptionsFoundLabel"
+        [noEntriesFoundLabel]="noOptionsFoundLabel()"
       >
         <watt-icon ngxMatSelectSearchClear name="close" size="s" />
       </ngx-mat-select-search>
     </mat-option>
 
-    @if (!multiple && showResetOption) {
+    @if (!multiple() && showResetOption()) {
       <mat-option>{{ emDash }}</mat-option>
     }
 
