feat: adds contact details form

--- a/libs/dh/metering-point/feature-move-in/src/components/move-in.component.html
+++ b/libs/dh/metering-point/feature-move-in/src/components/move-in.component.html
@@ -122,6 +122,9 @@ limitations under the License.
       [previousButtonLabel]="t('steps.customerDetails.label')"
       [nextButtonLabel]="t('save')"
       [loadingNextButton]="false"
-    />
+    >
+      <dh-contact-details-form [contactDetailsForm]="contactDetailsForm" [countries]="[]" />
+    </watt-stepper-step>
+
   </watt-stepper>
 </watt-modal>
