chore: alters translation strings to use correct format, removes unnecessary declarations, and implements country options in contact details form - suggestions from PR

--- a/libs/dh/metering-point/feature-move-in/src/components/move-in.component.html
+++ b/libs/dh/metering-point/feature-move-in/src/components/move-in.component.html
@@ -36,7 +36,7 @@ limitations under the License.
       [nextButtonLabel]="t('save')"
       [loadingNextButton]="false"
     >
-      <dh-contact-details-form [contactDetailsForm]="contactDetailsForm" [countries]="[]" />
+      <dh-contact-details-form [contactDetailsForm]="contactDetailsForm" />
     </watt-stepper-step>
   </watt-stepper>
 </watt-modal>
