--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -156,7 +156,7 @@ limitations under the License.
     <tr
       mat-footer-row
       [class.watt-table-hide-footer]="loading() || dataSource().filteredData.length === 0"
-      *matFooterRowDef="_getColumns(); sticky: stickyFooter"
+      *matFooterRowDef="_getColumns(); sticky: stickyFooter()"
     ></tr>
   }
 
