Refactor sortDirection input

--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -20,7 +20,7 @@ limitations under the License.
   role="treegrid"
   [ngClass]="{ 'watt-table-has-selection': _filteredSelection.length > 0 }"
   [matSortActive]="sortBy()"
-  [matSortDirection]="sortDirection"
+  [matSortDirection]="sortDirection()"
   [matSortDisableClear]="!sortClear"
   [dataSource]="dataSource()"
   [attr.aria-label]="description()"
