--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -141,7 +141,7 @@ limitations under the License.
     *matRowDef="let row; columns: _getColumns()"
     [attr.aria-selected]="row === activeRow"
     [ngClass]="{
-      'watt-table-highlight-row': !disabled() && !suppressRowHoverHighlight,
+      'watt-table-highlight-row': !disabled() && !suppressRowHoverHighlight(),
       'watt-table-clickable-row': !disabled() && rowClick.observed,
       'watt-table-active-row': _isActiveRow(row),
       'watt-table-no-end-divider': hideColumnHeaders,
