--- a/libs/dh/metering-point/feature-move-in/src/components/move-in.component.html
+++ b/libs/dh/metering-point/feature-move-in/src/components/move-in.component.html
@@ -35,6 +35,8 @@ limitations under the License.
       [previousButtonLabel]="t('steps.customerDetails.label')"
       [nextButtonLabel]="t('save')"
       [loadingNextButton]="false"
-    />
+    >
+      <dh-contact-details-form [contactDetailsForm]="contactDetailsForm" />
+    </watt-stepper-step>
   </watt-stepper>
 </watt-modal>
