--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -133,7 +133,7 @@ limitations under the License.
     <td class="watt-table-footer-spacer" mat-footer-cell *matFooterCellDef></td>
   </ng-container>
 
-  @if (!hideColumnHeaders) {
+  @if (!hideColumnHeaders()) {
     <tr mat-header-row *matHeaderRowDef="_getColumns()"></tr>
   }
   <tr
@@ -144,7 +144,7 @@ limitations under the License.
       'watt-table-highlight-row': !disabled() && !suppressRowHoverHighlight(),
       'watt-table-clickable-row': !disabled() && rowClick.observed,
       'watt-table-active-row': _isActiveRow(row),
-      'watt-table-no-end-divider': hideColumnHeaders,
+      'watt-table-no-end-divider': hideColumnHeaders(),
     }"
   ></tr>
 
