Refactor _toolbar contentChild

--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -148,7 +148,7 @@ limitations under the License.
     }"
   ></tr>
 
-  @if (_toolbar) {
+  @if (toolbar()) {
     <tr mat-footer-row *matFooterRowDef="['spacer']"></tr>
   }
 
