--- a/libs/watt/package/picker/datepicker/watt-datepicker.component.html
+++ b/libs/watt/package/picker/datepicker/watt-datepicker.component.html
@@ -92,7 +92,7 @@ limitations under the License.
     <watt-placeholder-mask
       [primaryInputElement]="actualInput"
       [mask]="inputMask()"
-      [placeholder]="datePlaceholder"
+      [placeholder]="placeholder"
       (maskApplied)="inputChanged($event)"
     />
 
