--- a/libs/watt/package/picker/timepicker/watt-timepicker.component.html
+++ b/libs/watt/package/picker/timepicker/watt-timepicker.component.html
@@ -14,7 +14,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<watt-field [id]="id" [control]="control" [label]="label">
+<watt-field [id]="id" [control]="control" [label]="label()">
   @if (!range) {
     <input
       inert
@@ -90,7 +90,7 @@ limitations under the License.
         (focusin)="onFocusIn()"
         (focusout)="onFocusOut($event)"
       >
-        <span class="watt-label">{{ sliderLabel }}</span>
+        <span class="watt-label">{{ sliderLabel() }}</span>
         <watt-slider
           [min]="sliderSteps[0]"
           [max]="sliderSteps[sliderSteps.length - 1]"
