--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -27,21 +27,21 @@ limitations under the License.
   (matSortChange)="sortChange.emit($event)"
 >
   @if (selectable()) {
-    <ng-container [matColumnDef]="_checkboxColumn" [sticky]="true">
+    <ng-container [matColumnDef]="checkboxColumn" [sticky]="true">
       <th mat-header-cell *matHeaderCellDef class="watt-table-checkbox-cell">
         <watt-checkbox [(ngModel)]="_columnSelection" />
       </th>
       <td mat-cell *matCellDef="let row" class="watt-table-checkbox-cell">
         <watt-checkbox
-          [ngModel]="_selectionModel.isSelected(row)"
-          (ngModelChange)="_selectionModel.toggle(row)"
+          [ngModel]="selectionModel.isSelected(row)"
+          (ngModelChange)="selectionModel.toggle(row)"
           (click)="$event.stopPropagation()"
         />
       </td>
     </ng-container>
   }
 
-  <ng-container [matColumnDef]="_expandableColumn">
+  <ng-container [matColumnDef]="expandableColumn">
     <th mat-header-cell *matHeaderCellDef></th>
     <td
       #td
@@ -115,7 +115,7 @@ limitations under the License.
         }
       </td>
 
-      @if (_hasFooter()) {
+      @if (hasFooter()) {
         <td
           mat-footer-cell
           *matFooterCellDef
@@ -142,7 +142,7 @@ limitations under the License.
     [attr.aria-selected]="row === activeRow()"
     [ngClass]="{
       'watt-table-highlight-row': !disabled() && !suppressRowHoverHighlight(),
-      'watt-table-clickable-row': !disabled() && _rowClick$.observed,
+      'watt-table-clickable-row': !disabled() && rowClick$.observed,
       'watt-table-active-row': _isActiveRow(row),
       'watt-table-no-end-divider': hideColumnHeaders(),
     }"
@@ -152,7 +152,7 @@ limitations under the License.
     <tr mat-footer-row *matFooterRowDef="['spacer']"></tr>
   }
 
-  @if (_hasFooter()) {
+  @if (hasFooter()) {
     <tr
       mat-footer-row
       [class.watt-table-hide-footer]="loading() || dataSource().filteredData.length === 0"
