--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -18,7 +18,7 @@ limitations under the License.
   mat-table
   matSort
   role="treegrid"
-  [ngClass]="{ 'watt-table-has-selection': _filteredSelection.length > 0 }"
+  [ngClass]="{ 'watt-table-has-selection': getSelectionState() !== false }"
   [matSortActive]="sortBy()"
   [matSortDirection]="sortDirection()"
   [matSortDisableClear]="!sortClear()"
@@ -29,12 +29,15 @@ limitations under the License.
   @if (selectable()) {
     <ng-container [matColumnDef]="_checkboxColumn" [sticky]="true">
       <th mat-header-cell *matHeaderCellDef class="watt-table-checkbox-cell">
-        <watt-checkbox [(ngModel)]="_columnSelection" />
+        <watt-checkbox
+          [ngModel]="getSelectionState()"
+          (ngModelChange)="$event ? selection.set(dataSource().filteredData) : clearSelection()"
+        />
       </th>
       <td mat-cell *matCellDef="let row" class="watt-table-checkbox-cell">
         <watt-checkbox
-          [ngModel]="_selectionModel.isSelected(row)"
-          (ngModelChange)="_selectionModel.toggle(row)"
+          [ngModel]="selection().includes(row)"
+          (ngModelChange)="toggleSelection(row)"
           (click)="$event.stopPropagation()"
         />
       </td>
@@ -176,7 +179,7 @@ limitations under the License.
 @if (toolbar(); as toolbar) {
   <div class="watt-table-toolbar" role="toolbar">
     <ng-container
-      *ngTemplateOutlet="toolbar.templateRef; context: { $implicit: _filteredSelection }"
+      *ngTemplateOutlet="toolbar.templateRef; context: { $implicit: filterSelection() }"
     />
   </div>
 }
