--- a/libs/dh/admin/feature-user-roles/src/lib/details/edit.component.html
+++ b/libs/dh/admin/feature-user-roles/src/lib/details/edit.component.html
@@ -72,7 +72,7 @@ limitations under the License.
               [hasError]="hasError()"
               [loading]="loading()"
               [permissions]="permissions()"
-              [selection]="initiallySelectedPermissions()"
+              [initialSelection]="initiallySelectedPermissions()"
               (selectionChanged)="onSelectionChanged($event)"
             />
           </watt-card>
