chore: adds new stepper example with big modal and adds max-height to stepper

--- a/libs/watt/package/stepper/+storybook/stepper.modal.example.component.html
+++ b/libs/watt/package/stepper/+storybook/stepper.modal.example.component.html
@@ -16,5 +16,5 @@ limitations under the License.
 -->
 <watt-button (click)="modal.open()">Open stepper dialog</watt-button>
 <watt-modal #modal title="Stepper dialog" size="medium" closeLabel="Close modal">
-  <watt-stepper-example />
+  <watt-stepper-example [isBig]="isBig()" />
 </watt-modal>
