--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -69,7 +69,7 @@ limitations under the License.
           column.value.headerCellClass
         }}"
       >
-        @if (_getColumnHelperAction(column); as action) {
+        @if (column.value.helperAction; as action) {
           <watt-icon name="help" (click)="action()" />
         }
 
