--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -81,7 +81,7 @@ limitations under the License.
         >
           {{ _getColumnHeader(column) }}
         </div>
-        @if (_getColumnHeaderTooltip(column); as tooltip) {
+        @if (column.value.tooltip; as tooltip) {
           <watt-icon [title]="tooltip" name="info" />
         }
       </th>
