--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -145,7 +145,7 @@ limitations under the License.
     [attr.aria-selected]="row === activeRow()"
     [ngClass]="{
       'watt-table-highlight-row': !disabled() && !suppressRowHoverHighlight(),
-      'watt-table-clickable-row': !disabled() && _rowClick$.observed,
+      'watt-table-clickable-row': !disabled() && rowClick$.observed,
       'watt-table-active-row': _isActiveRow(row),
       'watt-table-no-end-divider': hideColumnHeaders(),
     }"
